# maleo

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  html5app
debian/: changelog  control  install
src/: Makefile.am  config.vala  help.vala  main.vala  run.vala  utils.vala  webview.vala  window.vala
vapi/: javascriptcore.vapi  seed.vapi  webkitgtk-3.0.deps  webkitgtk-3.0.vapi
