AC_INIT([html5app], [0.1.0], [], [html5app])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([])
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AM_PROG_VALAC([0.14.0])

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=html5app
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0
GTK_REQUIRED=3.0.8
ATK_REQUIRED=2.0.0
WEBKIT_REQUIRED=1.3.0

PKG_CHECK_MODULES(HTML5APP, glib-2.0 >= $GLIB_REQUIRED gtk+-3.0 >= $GTK_REQUIRED webkitgtk-3.0 >= $WEBKIT_REQUIRED)

AC_SUBST(HTML5APP_CFLAGS)
AC_SUBST(HTML5APP_LIBS)

VALA_PACKAGES="--pkg gdk-x11-3.0 --pkg gtk+-3.0 --pkg webkitgtk-3.0"

AC_SUBST(VALA_PACKAGES)

AC_PREFIX_DEFAULT("/usr")

AC_CONFIG_FILES([Makefile
	src/Makefile
	])

AC_OUTPUT
