AC_INIT([maleo], [0.1.0], [], [maleo])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([])
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AM_PROG_VALAC([0.14.0])

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=maleo
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0
GTK_REQUIRED=3.0.8
ATK_REQUIRED=2.0.0
SEED_REQUIRED=3.2.0
WEBKIT_REQUIRED=1.3.0
LIBXML_REQUIRED=2.9.1
GEE_REQUIRED=0.6.7

PKG_CHECK_MODULES(maleo, glib-2.0 >= $GLIB_REQUIRED gtk+-3.0 >= $GTK_REQUIRED webkitgtk-3.0 >= $WEBKIT_REQUIRED seed >= $SEED_REQUIRED libxml-2.0 >= $LIBXML_REQUIRED gee-1.0 >= $GEE_REQUIRED)

AC_SUBST(maleo_CFLAGS)
AC_SUBST(maleo_LIBS)
AC_PROG_LN_S

VALA_PACKAGES="--pkg gdk-x11-3.0 --pkg gtk+-3.0 --pkg webkitgtk-3.0 --pkg seed --pkg javascriptcore --pkg libxml-2.0 --pkg gee-1.0"

AC_SUBST(VALA_PACKAGES)

AC_PREFIX_DEFAULT("/usr")

AC_CONFIG_FILES([Makefile
	src/Makefile
	])

AC_OUTPUT
